// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MediaGallery Snapshot > renders with a single screenshot correctly 1`] = `
<section class="
  flex
  flex-col
  gap-2
  md:max-w-[444px]
  w-full
">
  <div class="aspect-video">
    <div class="
      cursor-pointer
      flex
      h-full
      items-center
      justify-center
      relative
      w-full
    ">
      <img
        alt="Main Image"
        class="
          cursor-pointer
          h-full
          object-cover
          w-full
        "
        data-nuxt-img=""
        src="https://example.com/screenshot1.jpg"
        srcset="https://example.com/screenshot1.jpg 1x, https://example.com/screenshot1.jpg 2x"
      />
    </div>
  </div>
  <div class="
    gap-2
    grid
    grid-cols-4
  ">
    <div>
      <div class="
        flex
        h-full
        items-center
        justify-center
        w-full
      ">
        <img
          alt="Beta Inc screenshots"
          class="
            h-full
            object-contain
            w-full
          "
          data-nuxt-img=""
          src="https://example.com/screenshot1.jpg"
          srcset="https://example.com/screenshot1.jpg 1x, https://example.com/screenshot1.jpg 2x"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`MediaGallery Snapshot > renders with multiple screenshots correctly 1`] = `
<section class="
  flex
  flex-col
  gap-2
  md:max-w-[444px]
  w-full
">
  <div class="aspect-video">
    <div class="
      cursor-pointer
      flex
      h-full
      items-center
      justify-center
      relative
      w-full
    ">
      <img
        alt="Main Image"
        class="
          cursor-pointer
          h-full
          object-cover
          w-full
        "
        data-nuxt-img=""
        src="https://example.com/screenshot1.jpg"
        srcset="https://example.com/screenshot1.jpg 1x, https://example.com/screenshot1.jpg 2x"
      />
    </div>
  </div>
  <div class="
    gap-2
    grid
    grid-cols-4
  ">
    <div>
      <div class="
        flex
        h-full
        items-center
        justify-center
        w-full
      ">
        <img
          alt="Gamma LLC screenshots"
          class="
            h-full
            object-contain
            w-full
          "
          data-nuxt-img=""
          src="https://example.com/screenshot1.jpg"
          srcset="https://example.com/screenshot1.jpg 1x, https://example.com/screenshot1.jpg 2x"
        />
      </div>
    </div>
    <div>
      <div class="
        flex
        h-full
        items-center
        justify-center
        w-full
      ">
        <img
          alt="Gamma LLC screenshots"
          class="
            h-full
            object-contain
            w-full
          "
          data-nuxt-img=""
          src="https://example.com/screenshot2.jpg"
          srcset="https://example.com/screenshot2.jpg 1x, https://example.com/screenshot2.jpg 2x"
        />
      </div>
    </div>
    <div>
      <div class="
        flex
        h-full
        items-center
        justify-center
        w-full
      ">
        <img
          alt="Gamma LLC screenshots"
          class="
            h-full
            object-contain
            w-full
          "
          data-nuxt-img=""
          src="https://example.com/screenshot3.jpg"
          srcset="https://example.com/screenshot3.jpg 1x, https://example.com/screenshot3.jpg 2x"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`MediaGallery Snapshot > renders with no screenshots correctly 1`] = `
<section class="
  flex
  flex-col
  gap-2
  md:max-w-[444px]
  w-full
">
  <div class="aspect-video">
    <div class="
      cursor-pointer
      flex
      h-full
      items-center
      justify-center
      relative
      w-full
    ">
      <!-- v-if -->
    </div>
  </div>
  <div class="
    gap-2
    grid
    grid-cols-4
  "></div>
</section>
`;
